fircpp/parser/FIRRTLParser.cpp

// Generated from /home/itviewer/compiled/fircpp/fircpp/FIRRTL.g4 by ANTLR 4.8


#include "FIRRTLListener.h"
#include "FIRRTLVisitor.h"

#include "FIRRTLParser.h"


using namespace antlrcpp;
using namespace fircpp;
using namespace antlr4;

FIRRTLParser::FIRRTLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FIRRTLParser::~FIRRTLParser() {
  delete _interpreter;
}

std::string FIRRTLParser::getGrammarFileName() const {
  return "FIRRTL.g4";
}

const std::vector<std::string>& FIRRTLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& FIRRTLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CircuitContext ------------------------------------------------------------------

FIRRTLParser::CircuitContext::CircuitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FIRRTLParser::CircuitContext::Key_circuit() {
  return getToken(FIRRTLParser::Key_circuit, 0);
}

FIRRTLParser::IdContext* FIRRTLParser::CircuitContext::id() {
  return getRuleContext<FIRRTLParser::IdContext>(0);
}

tree::TerminalNode* FIRRTLParser::CircuitContext::INDENT() {
  return getToken(FIRRTLParser::INDENT, 0);
}

tree::TerminalNode* FIRRTLParser::CircuitContext::DEDENT() {
  return getToken(FIRRTLParser::DEDENT, 0);
}

tree::TerminalNode* FIRRTLParser::CircuitContext::EOF() {
  return getToken(FIRRTLParser::EOF, 0);
}

FIRRTLParser::InfoContext* FIRRTLParser::CircuitContext::info() {
  return getRuleContext<FIRRTLParser::InfoContext>(0);
}

std::vector<FIRRTLParser::ModuleContext *> FIRRTLParser::CircuitContext::module() {
  return getRuleContexts<FIRRTLParser::ModuleContext>();
}

FIRRTLParser::ModuleContext* FIRRTLParser::CircuitContext::module(size_t i) {
  return getRuleContext<FIRRTLParser::ModuleContext>(i);
}


size_t FIRRTLParser::CircuitContext::getRuleIndex() const {
  return FIRRTLParser::RuleCircuit;
}

void FIRRTLParser::CircuitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FIRRTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCircuit(this);
}

void FIRRTLParser::CircuitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FIRRTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCircuit(this);
}


antlrcpp::Any FIRRTLParser::CircuitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FIRRTLVisitor*>(visitor))
    return parserVisitor->visitCircuit(this);
  else
    return visitor->visitChildren(this);
}

FIRRTLParser::CircuitContext* FIRRTLParser::circuit() {
  CircuitContext *_localctx = _tracker.createInstance<CircuitContext>(_ctx, getState());
  enterRule(_localctx, 0, FIRRTLParser::RuleCircuit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(58);
    match(FIRRTLParser::Key_circuit);
    setState(59);
    id();
    setState(60);
    match(FIRRTLParser::T__0);
    setState(62);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FIRRTLParser::FileInfo) {
      setState(61);
      info();
    }
    setState(64);
    match(FIRRTLParser::INDENT);
    setState(68);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == FIRRTLParser::Key_module

    || _la == FIRRTLParser::Key_extmodule) {
      setState(65);
      module();
      setState(70);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(71);
    match(FIRRTLParser::DEDENT);
    setState(72);
    match(FIRRTLParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ModuleContext ------------------------------------------------------------------

FIRRTLParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FIRRTLParser::ModuleContext::Key_module() {
  return getToken(FIRRTLParser::Key_module, 0);
}

FIRRTLParser::IdContext* FIRRTLParser::ModuleContext::id() {
  return getRuleContext<FIRRTLParser::IdContext>(0);
}

tree::TerminalNode* FIRRTLParser::ModuleContext::INDENT() {
  return getToken(FIRRTLParser::INDENT, 0);
}

FIRRTLParser::ModuleBlockContext* FIRRTLParser::ModuleContext::moduleBlock() {
  return getRuleContext<FIRRTLParser::ModuleBlockContext>(0);
}

tree::TerminalNode* FIRRTLParser::ModuleContext::DEDENT() {
  return getToken(FIRRTLParser::DEDENT, 0);
}

FIRRTLParser::InfoContext* FIRRTLParser::ModuleContext::info() {
  return getRuleContext<FIRRTLParser::InfoContext>(0);
}

std::vector<FIRRTLParser::PortContext *> FIRRTLParser::ModuleContext::port() {
  return getRuleContexts<FIRRTLParser::PortContext>();
}

FIRRTLParser::PortContext* FIRRTLParser::ModuleContext::port(size_t i) {
  return getRuleContext<FIRRTLParser::PortContext>(i);
}

tree::TerminalNode* FIRRTLParser::ModuleContext::Key_extmodule() {
  return getToken(FIRRTLParser::Key_extmodule, 0);
}

FIRRTLParser::DefnameContext* FIRRTLParser::ModuleContext::defname() {
  return getRuleContext<FIRRTLParser::DefnameContext>(0);
}

std::vector<FIRRTLParser::ParameterContext *> FIRRTLParser::ModuleContext::parameter() {
  return getRuleContexts<FIRRTLParser::ParameterContext>();
}

FIRRTLParser::ParameterContext* FIRRTLParser::ModuleContext::parameter(size_t i) {
  return getRuleContext<FIRRTLParser::ParameterContext>(i);
}


size_t FIRRTLParser::ModuleContext::getRuleIndex() const {
  return FIRRTLParser::RuleModule;
}

void FIRRTLParser::ModuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FIRRTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterModule(this);
}

void FIRRTLParser::ModuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FIRRTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitModule(this);
}


antlrcpp::Any FIRRTLParser::ModuleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FIRRTLVisitor*>(visitor))
    return parserVisitor->visitModule(this);
  else
    return visitor->visitChildren(this);
}

FIRRTLParser::ModuleContext* FIRRTLParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 2, FIRRTLParser::RuleModule);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(114);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FIRRTLParser::Key_module: {
        enterOuterAlt(_localctx, 1);
        setState(74);
        match(FIRRTLParser::Key_module);
        setState(75);
        id();
        setState(76);
        match(FIRRTLParser::T__0);
        setState(78);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == FIRRTLParser::FileInfo) {
          setState(77);
          info();
        }
        setState(80);
        match(FIRRTLParser::INDENT);
        setState(84);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(81);
            port(); 
          }
          setState(86);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx);
        }
        setState(87);
        moduleBlock();
        setState(88);
        match(FIRRTLParser::DEDENT);
        break;
      }

      case FIRRTLParser::Key_extmodule: {
        enterOuterAlt(_localctx, 2);
        setState(90);
        match(FIRRTLParser::Key_extmodule);
        setState(91);
        id();
        setState(92);
        match(FIRRTLParser::T__0);
        setState(94);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == FIRRTLParser::FileInfo) {
          setState(93);
          info();
        }
        setState(96);
        match(FIRRTLParser::INDENT);
        setState(100);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == FIRRTLParser::Key_input

        || _la == FIRRTLParser::Key_output) {
          setState(97);
          port();
          setState(102);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(104);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == FIRRTLParser::T__11) {
          setState(103);
          defname();
        }
        setState(109);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == FIRRTLParser::Key_parameter) {
          setState(106);
          parameter();
          setState(111);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(112);
        match(FIRRTLParser::DEDENT);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PortContext ------------------------------------------------------------------

FIRRTLParser::PortContext::PortContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FIRRTLParser::DirContext* FIRRTLParser::PortContext::dir() {
  return getRuleContext<FIRRTLParser::DirContext>(0);
}

FIRRTLParser::IdContext* FIRRTLParser::PortContext::id() {
  return getRuleContext<FIRRTLParser::IdContext>(0);
}

FIRRTLParser::TypeContext* FIRRTLParser::PortContext::type() {
  return getRuleContext<FIRRTLParser::TypeContext>(0);
}

tree::TerminalNode* FIRRTLParser::PortContext::NEWLINE() {
  return getToken(FIRRTLParser::NEWLINE, 0);
}

FIRRTLParser::InfoContext* FIRRTLParser::PortContext::info() {
  return getRuleContext<FIRRTLParser::InfoContext>(0);
}


size_t FIRRTLParser::PortContext::getRuleIndex() const {
  return FIRRTLParser::RulePort;
}

void FIRRTLParser::PortContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FIRRTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPort(this);
}

void FIRRTLParser::PortContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FIRRTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPort(this);
}


antlrcpp::Any FIRRTLParser::PortContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FIRRTLVisitor*>(visitor))
    return parserVisitor->visitPort(this);
  else
    return visitor->visitChildren(this);
}

FIRRTLParser::PortContext* FIRRTLParser::port() {
  PortContext *_localctx = _tracker.createInstance<PortContext>(_ctx, getState());
  enterRule(_localctx, 4, FIRRTLParser::RulePort);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    dir();
    setState(117);
    id();
    setState(118);
    match(FIRRTLParser::T__0);
    setState(119);
    type(0);
    setState(121);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == FIRRTLParser::FileInfo) {
      setState(120);
      info();
    }
    setState(123);
    match(FIRRTLParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DirContext ------------------------------------------------------------------

FIRRTLParser::DirContext::DirContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FIRRTLParser::DirContext::Key_input() {
  return getToken(FIRRTLParser::Key_input, 0);
}

tree::TerminalNode* FIRRTLParser::DirContext::Key_output() {
  return getToken(FIRRTLParser::Key_output, 0);
}


size_t FIRRTLParser::DirContext::getRuleIndex() const {
  return FIRRTLParser::RuleDir;
}

void FIRRTLParser::DirContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FIRRTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDir(this);
}

void FIRRTLParser::DirContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FIRRTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDir(this);
}


antlrcpp::Any FIRRTLParser::DirContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FIRRTLVisitor*>(visitor))
    return parserVisitor->visitDir(this);
  else
    return visitor->visitChildren(this);
}

FIRRTLParser::DirContext* FIRRTLParser::dir() {
  DirContext *_localctx = _tracker.createInstance<DirContext>(_ctx, getState());
  enterRule(_localctx, 6, FIRRTLParser::RuleDir);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    _la = _input->LA(1);
    if (!(_la == FIRRTLParser::Key_input

    || _la == FIRRTLParser::Key_output)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

FIRRTLParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FIRRTLParser::TypeContext::Key_UInt() {
  return getToken(FIRRTLParser::Key_UInt, 0);
}

std::vector<FIRRTLParser::IntLitContext *> FIRRTLParser::TypeContext::intLit() {
  return getRuleContexts<FIRRTLParser::IntLitContext>();
}

FIRRTLParser::IntLitContext* FIRRTLParser::TypeContext::intLit(size_t i) {
  return getRuleContext<FIRRTLParser::IntLitContext>(i);
}

tree::TerminalNode* FIRRTLParser::TypeContext::Key_SInt() {
  return getToken(FIRRTLParser::Key_SInt, 0);
}

tree::TerminalNode* FIRRTLParser::TypeContext::Key_Fixed() {
  return getToken(FIRRTLParser::Key_Fixed, 0);
}

FIRRTLParser::LowerBoundContext* FIRRTLParser::TypeContext::lowerBound() {
  return getRuleContext<FIRRTLParser::LowerBoundContext>(0);
}

std::vector<FIRRTLParser::BoundValueContext *> FIRRTLParser::TypeContext::boundValue() {
  return getRuleContexts<FIRRTLParser::BoundValueContext>();
}

FIRRTLParser::BoundValueContext* FIRRTLParser::TypeContext::boundValue(size_t i) {
  return getRuleContext<FIRRTLParser::BoundValueContext>(i);
}

FIRRTLParser::UpperBoundContext* FIRRTLParser::TypeContext::upperBound() {
  return getRuleContext<FIRRTLParser::UpperBoundContext>(0);
}

tree::TerminalNode* FIRRTLParser::TypeContext::Key_Clock() {
  return getToken(FIRRTLParser::Key_Clock, 0);
}

tree::TerminalNode* FIRRTLParser::TypeContext::Key_Analog() {
  return getToken(FIRRTLParser::Key_Analog, 0);
}

std::vector<FIRRTLParser::FieldContext *> FIRRTLParser::TypeContext::field() {
  return getRuleContexts<FIRRTLParser::FieldContext>();
}

FIRRTLParser::FieldContext* FIRRTLParser::TypeContext::field(size_t i) {
  return getRuleContext<FIRRTLParser::FieldContext>(i);
}

FIRRTLParser::TypeContext* FIRRTLParser::TypeContext::type() {
  return getRuleContext<FIRRTLParser::TypeContext>(0);
}


size_t FIRRTLParser::TypeContext::getRuleIndex() const {
  return FIRRTLParser::RuleType;
}

void FIRRTLParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FIRRTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void FIRRTLParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<FIRRTLListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


antlrcpp::Any FIRRTLParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FIRRTLVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}


FIRRTLParser::TypeContext* FIRRTLParser::type() {
   return type(0);
}

FIRRTLParser::TypeContext* FIRRTLParser::type(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  FIRRTLParser::TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, parentState);
  FIRRTLParser::TypeContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, FIRRTLParser::RuleType, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(187);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FIRRTLParser::Key_UInt: {
        setState(128);
        match(FIRRTLParser::Key_UInt);
        setState(133);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 10, _ctx)) {
        case 1: {
          setState(129);
          match(FIRRTLParser::T__1);
          setState(130);
          intLit();
          setState(131);
          match(FIRRTLParser::T__2);
          break;
        }

        }
        break;
      }

      case FIRRTLParser::Key_SInt: {
        setState(135);
        match(FIRRTLParser::Key_SInt);
        setState(140);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx)) {
        case 1: {
          setState(136);
          match(FIRRTLParser::T__1);
          setState(137);
          intLit();
          setState(138);
          match(FIRRTLParser::T__2);
          break;
        }

        }
        break;
      }

      case FIRRTLParser::Key_Fixed: {
        setState(142);
        match(FIRRTLParser::Key_Fixed);
        setState(147);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
        case 1: {
          setState(143);
          match(FIRRTLParser::T__1);
          setState(144);
          intLit();
          setState(145);
          match(FIRRTLParser::T__2);
          break;
        }

        }
        setState(155);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 13, _ctx)) {
        case 1: {
          setState(149);
          match(FIRRTLParser::T__1);
          setState(150);
          match(FIRRTLParser::T__1);
          setState(151);
          intLit();
          setState(152);
          match(FIRRTLParser::T__2);
          setState(153);
          match(FIRRTLParser::T__2);
          break;
        }

        }
        break;
      }

      case FIRRTLParser::T__3: {
        setState(157);
        match(FIRRTLParser::T__3);
        setState(163);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 14, _ctx)) {
        case 1: {
          setState(158);
          lowerBound();
          setState(159);
          boundValue();
          setState(160);
          boundValue();
          setState(161);
          upperBound();
          break;
        }

        }
        setState(167);
        _errHandler->sync(this);

        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 15, _ctx)) {
        case 1: {
          setState(165);
          match(FIRRTLParser::T__4);
          setState(166);
          intLit();
          break;
        }

        }
        break;
      }

      case FIRRTLParser::Key_Clock: {
        setState(169);
        match(FIRRTLParser::Key_Clock);
        break;
      }

      case FIRRTLParser::T__5: {
        setState(170);
        match(FIRRTLParser::T__5);
        break;
      }

      case FIRRTLParser::T__6: {
        setState(171);
        match(FIRRTLParser::T__6);
        break;
      }

      case FIRRTLParser::Key_Analog: {
        setState(172);
        match(FIRRTLParser::Key_Analog);
        setState(177);
        _errHandler->sync(this);
